--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <meta name="theme-color" content="#020617">
 
-    <title>Buscador EPE</title>
+    <title>Buscador de códigos y matrículas</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
